removed stretch issue

--- a/src/pages/photo-list/photo-list.scss
+++ b/src/pages/photo-list/photo-list.scss
@@ -14,7 +14,9 @@ page-photo-list {
             ion-row {
                 ion-col {
                     img {
-                        
+                        width: 100%;
+                        height: 100px;
+                        object-fit: cover;
                     }
                 }
             }
